[package]
name = "thesaurus"
version = "0.1.0"
authors = ["banana <jgjin@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14"
mongodb = "0.10"
reqwest = "0.10"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }